Prevent long startup failures from clipping
When goofy fails to start up, it may show an error
message in an alert. If the error message is long, it
clips. This causes it to wrap instead.

BUG=none
TEST=manual

Reviewed-on: https://chromium-review.googlesource.com/219115
Commit-Queue: Peter Ammon <pca@google.com>
Tested-by: Peter Ammon <pca@google.com>

--- a/py/goofy_split/static/goofy.css
+++ b/py/goofy_split/static/goofy.css
@@ -513,7 +513,7 @@ table + .goofy-history-header {
   width: 100%;
 }
 .goofy-startup-error {
-  white-space: pre;
+  white-space: pre-wrap;
   margin-top: 1em;
 }
 .modal-dialog-buttons {
